# gala-yard-haunt

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
examples/: blink.py  blink_env.py  button.py
src/cannon/: audio_control.py  cannon_controller.py  led_effects.py  relay_control.py
tests/: test_example.py
typings/: gpiozero.pyi  pygame.pyi
typings/RPi/: GPIO.pyi  __init__.pyi
typings/rpi_ws281x/: __init__.pyi
